--- a/package.json
+++ b/package.json
@@ -11,17 +11,25 @@
   },
   "dependencies": {
     "antd": "^5.23.3",
+    "framer-motion": "^12.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-lazy-load-image-component": "^1.6.3",
+    "react-parallax": "^3.5.1",
     "react-router-dom": "^7.1.3",
+    "react-spinners": "^0.15.0",
     "sass": "^1.83.4",
-    "uninstall": "^0.0.0"
+    "uninstall": "^0.0.0",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/node": "^22.13.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-lazy-load-image-component": "^1.6.4",
+    "@types/webfontloader": "^1.6.38",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
